Fixed blurring active page on link click.

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -41,6 +41,7 @@
     justify-items: center;
     align-items: center;
     margin: 0;
+    user-select: none;
 }
 
 .nav-ul-wrapper img {
